Fixed Horizontal Scroll

--- a/src/components/HomePage/features1/features1.module.css
+++ b/src/components/HomePage/features1/features1.module.css
@@ -15,8 +15,7 @@
 }
 .detailedFeatureSection h3 {
   font-family: Nunito;
-  font-size: 48px;
-  width: 125%;
+  font-size: 44px;
   font-weight: 600;
   color: black;
 }
